--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="challenge">Frontend
         Mentor</a>.
-      Coded by <a href="#" class="name">Kynur</a>.
+      Coded by <a href="https://github.com/kynur" class="name">Kynur</a>.
     </div>
   </main>
 </body>
